--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,57 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+header{
+    width: 100%;
+    background-image: url(../assets/images/banner-bk.jpg);
+    color: white;
+    height: 61vh;
+    display: flex;
+    flex-direction: column;
+    background-position: center;
+}
+#logo{
+    max-width: 90px;
+    max-height: 100px;
+    margin-left: 50px;
+    
+}
+#tittleone{
+   display: flex;
+   justify-content: space-between;
+   margin-top: 30px;
+   align-items: center;
+   margin-right: 50px;
+   margin-left: 50px;
+   font-size: larger;
+}
+#tittletwo{
+   
+    margin-left: 150px;
+    margin-top: 30px
+}
+.one{
+    font-size: 10vh;
+    width: 100vh;
+    font-weight: bold;
+}
+.onetwo{
+    width: 100vh;
+    font-weight: bold;
+}
+.two{
+    margin-top: 20px;
+    font-size: 2vh;
+    width: 75vh;
+}
+#buttomtittle{
+    background-color: #00FFAD;
+    width: 150px;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 30px;
+    font-size: larger;
+    font-weight: bold;
 }
