--- a/style/style.css
+++ b/style/style.css
@@ -146,3 +146,10 @@ flex-direction: column;
     font-size: 20px;
     max-width: 80vh;
 }
+#pricing{
+    display: flex;
+}
+#premium{
+    margin-top: 20vh;
+    line-height: 35px
+}
