--- a/style/style.css
+++ b/style/style.css
@@ -153,7 +153,7 @@ flex-direction: column;
     margin-right: 30px;
 }
 #premium{
-    margin-top: 20vh;
+  
     line-height: 50px;
     text-align: center;
     margin-top: 25vh;
@@ -170,7 +170,7 @@ flex-direction: column;
     width: 40vh;
 }
 #professional{
-    margin-top: 20vh;
+    
     line-height: 50px;
     text-align: center;
     margin-top: 25vh;
@@ -206,4 +206,115 @@ span{
     margin-top: 30px;
     font-size: larger;
     font-weight: bold;
+}
+#company{
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    background-color: #ECEEEF;
+    padding: 20px;
+}
+#contact{
+    background-image: url(../assets/images/contact-bk.jpg);
+    display: flex;
+    height: 60vh;
+ 
+}
+#infocontact{
+    color: white;
+    padding: 10vh;
+    max-width: 60vh;
+}
+#contactinfo{
+    margin-top: 30px;
+}
+#titlecontact{
+    font-size: 5vh;
+    padding-bottom: 20px;
+}
+#contactquestion{
+    display: flex;
+}
+#questone{
+display: flex;
+justify-content: center;
+
+}
+#name{
+margin-top: 8vh;
+    padding: 2vh;
+    color: white;
+    font-size: 3vh;
+    width: 50vh;
+    margin-left: 50px;
+}
+#email{
+    margin-top: 8vh;
+    padding: 2vh;
+    color: white;
+    font-size: 3vh;
+    width: 30vh;
+    margin-right: 10vh;
+  
+}
+#nameque{
+    width: 40vh;
+    height: 3vh;
+    background-color: #00ffae00;
+    border-color: #00FFAD;
+    border-radius: 10px;
+    
+}
+#emailque{
+    width: 40vh;
+    height: 3vh;
+    background-color: #00ffae00;
+    border-color: #00FFAD;
+    border-radius: 10px;
+    
+}
+#message{
+    margin-left: 8vh;
+    color: white;
+    font-size: 3vh;
+    width: 10vh;
+}
+#messageque{
+    width: 94vh;
+    height: 20vh;
+    background-color: #00ffae00;
+    border-color: #00FFAD;
+    border-radius: 10px;
+    border-width: 2px;
+}
+#buttomcontact{
+    width: 94vh;
+    height: 5vh;
+    border-radius: 30px;
+    background-color: #00FFAD;
+    font-size: x-large;
+    border: #00FFAD;
+}
+footer{
+    background-color: #192440;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#textfoot{
+    padding: 5vh;
+    
+}
+#redes{
+max-height: 5vh;
+border-radius: 100%;
+margin-left: 2vh;
+
+}
+#imgfoot{
+    display: flex;
+   padding-right: 5vh;
+
 }
