--- a/style/style.css
+++ b/style/style.css
@@ -348,6 +348,11 @@ margin-left: 2vh;
             margin-left: 48vh;
             margin-top: 10vh;
         }
+        #questone {
+            display: flex;
+            justify-content: center;
+            max-width: 29vh;
+        }
         #name{
             margin-top: 8vh;
             padding: 2vh;
@@ -356,6 +361,22 @@ margin-left: 2vh;
             width: 30vh;
             margin-left: 50px;
             
+            }
+            #emailque{
+                width: 31vh;
+                height: 3vh;
+                background-color: #00ffae00;
+                border-color: #00FFAD;
+                border-radius: 10px;
+                
+            }
+            #nameque{
+                width: 30vh;
+                height: 3vh;
+                background-color: #00ffae00;
+                border-color: #00FFAD;
+                border-radius: 10px;
+                
             }
             #email{
                 margin-top: 8vh;
@@ -366,9 +387,53 @@ margin-left: 2vh;
                 margin-right: 10vh;
               
             }
+            #message {
+                margin-left: -10vh;
+                color: white;
+                font-size: 3vh;
+                width: 10vh;
+            }
+            #messageque{
+                width: 65vh;
+                height: 20vh;
+                background-color: #00ffae00;
+                border-color: #00FFAD;
+                border-radius: 10px;
+                border-width: 2px;
+            }
+            #buttomcontact{
+                width: 65vh;
+                height: 5vh;
+                border-radius: 30px;
+                background-color: #00FFAD;
+                font-size: x-large;
+                border: #00FFAD;
+            }
+            #buttomsectiontwo{
+                margin-top: 40px;
+                max-width: 18vh;
+                margin-left: 26vh;
+                height: 50px;
+                border-radius: 30px;
+                font-size: x-large;
+                background-color: #192440;
+                color: white;
+                
+            }
+            #buttomsectiontwo2{
+                margin-top: 40px;
+                width: 18vh;
+                border-radius: 30px;
+                height: 50px;
+                background-color: #192440;
+                color: white;
+                font-size: x-large;
+               } 
+               
+        }
       
     #text{
      max-width: 40vh;   
     }
     }
-    }
+   
