Se termino la pagina web con todos sus @media y una pequeña correccion

--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,9 @@ header{
     margin-left: 50px;
     
 }
+#text{
+    max-width:60vh;
+}
 #tittleone{
    display: flex;
    justify-content: space-between;
