--- a/style/style.css
+++ b/style/style.css
@@ -217,6 +217,18 @@ span{
     justify-content: space-around;
     background-color: #ECEEEF;
     padding: 20px;
+    position: sticky;
+    bottom: 0px;
+    top: 0px;
+
+}
+.bmw{
+    width: 160px;
+    height: 100px;
+    position: absolute;
+    left: 50%;
+    border-radius: 100%;
+    transform: translate(-50%, -40%)
 }
 #contact{
     background-image: url(../assets/images/contact-bk.jpg);
@@ -334,6 +346,13 @@ margin-left: 2vh;
     flex-direction: column;
     background-position: center;
 }
+    .titt{
+        text-align: center;
+    width: 70vh;
+    margin-left: 25vh;
+    padding: 30px;
+    font-size: 45px;
+    }
         .one{
             font-size: 8vh;
             width: 100vh;
@@ -344,6 +363,18 @@ margin-left: 2vh;
             max-width: 60vh;
             margin-top: -25vh;
             margin-right: 5vh;
+        
+        }
+        #company{
+            margin-top: 10vh;
+            display: flex;
+            justify-content: center;
+            justify-content: space-around;
+            background-color: #ECEEEF;
+            padding: 20px;
+            position: sticky;
+            bottom: 0px;
+            top: 0px;
         
         }
         #tittlepricing{
@@ -366,7 +397,7 @@ margin-left: 2vh;
             
             }
             #emailque{
-                width: 31vh;
+                width: 20vh;
                 height: 3vh;
                 background-color: #00ffae00;
                 border-color: #00FFAD;
@@ -374,7 +405,7 @@ margin-left: 2vh;
                 
             }
             #nameque{
-                width: 30vh;
+                width: 20vh;
                 height: 3vh;
                 background-color: #00ffae00;
                 border-color: #00FFAD;
@@ -387,7 +418,7 @@ margin-left: 2vh;
                 color: white;
                 font-size: 3vh;
                 width: 20vh;
-                margin-right: 10vh;
+                margin-right: 5vh;
               
             }
             #message {
@@ -397,7 +428,7 @@ margin-left: 2vh;
                 width: 10vh;
             }
             #messageque{
-                width: 65vh;
+                width: 48vh;
                 height: 20vh;
                 background-color: #00ffae00;
                 border-color: #00FFAD;
@@ -405,7 +436,7 @@ margin-left: 2vh;
                 border-width: 2px;
             }
             #buttomcontact{
-                width: 65vh;
+                width: 48vh;
                 height: 5vh;
                 border-radius: 30px;
                 background-color: #00FFAD;
@@ -541,6 +572,25 @@ margin-left: 2vh;
                 margin-top: -25vh;
                 margin-left: 60vh;
             }
+            #buttomsectiontwo {
+                margin-top: 40px;
+                max-width: 18vh;
+                margin-left: 26vh;
+                height: 50px;
+                border-radius: 30px;
+                font-size: larger;
+                background-color: #192440;
+                color: white;
+            }
+            #buttomsectiontwo2 {
+                margin-top: 40px;
+                width: 18vh;
+                border-radius: 30px;
+                height: 50px;
+                background-color: #192440;
+                color: white;
+                font-size: large;
+            }
             #asidetwo {
                 margin-top: 10vh;
                 display: flex;
@@ -555,6 +605,18 @@ margin-left: 2vh;
             #text{
                 max-width: 30vh;   
                }
+               #company{
+                margin-top: 10vh;
+                display: flex;
+                justify-content: center;
+                justify-content: space-around;
+                background-color: #ECEEEF;
+                padding: 20px;
+                position: sticky;
+                bottom: 0px;
+                top: 0px;
+            
+            }
                #inf {
                 width: 27vh;
             }
@@ -649,7 +711,18 @@ margin-left: 2vh;
                     margin-right: 0vh;
                   
                 }
+                #company{
+                    margin-top: 10vh;
+                    display: flex;
+                    justify-content: center;
+                    justify-content: space-around;
+                    background-color: #ECEEEF;
+                    padding: 20px;
+                    position: sticky;
+                    bottom: 0px;
+                    top: 0px;
                 
+                }
                 .img1 {
                     max-width: 17vh;
                 }
@@ -660,6 +733,12 @@ margin-left: 2vh;
                     width: 31vh;
                     height: 38vh;
                     margin-top: 3vh;
+                }
+                #infocontact {
+                    color: white;
+                    padding: 5vh;
+                    padding-bottom: 8vh;
+                    max-width: 60vh;
                 }
                 #questone {
                     display: flex;
@@ -855,7 +934,7 @@ margin-left: 2vh;
                     flex-direction: column;
                     justify-content: center;
                     max-width: 23vh;
-                    margin-left: -13vh;
+                    margin-left: -10vh;
                 }
                 #nameque {
                     width: 15vh;
@@ -888,7 +967,7 @@ margin-left: 2vh;
                     border-radius: 10px;
                 }
                 #message {
-                    margin-left: -8vh;
+                    margin-left: -5vh;
                     color: white;
                     font-size: 3vh;
                     width: 10vh;
